add draft files

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
   <title>Document</title>
 </head>
 <body>
+<header class="header">
+  <div class="header__wrapper">
+    <div class="logo">
+      <a class="logo__link" href="#">Gustoso</a>
+    </div>
+    <nav class="navigation">
+      <ul class="navigation__list">
+        <li class="navigation__item"><a class="navigation__link" href="#">welcome</a></li>
+        <li><a href="#">menu</a></li>
+        <li><a href="#">reservations</a></li>
+        <li><a href="#">news</a></li>
+        <li><a href="#">contact</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
   
 </body>
 </html>
