--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link rel="stylesheet" href="css/style.css">
+  <title>Gustoso</title>
 </head>
 <body>
 <header class="page-header">
-  <div class="page-header__wrapper">
-    <div class="page-header__top">
+  <div class="page-header__top">
+    <div class="page-header__wrapper">
       <div class="page-header__logo  logo">
         <a class="logo__link" href="#">Gustoso</a>
       </div>
@@ -19,33 +20,36 @@
             <a class="navigation__link" href="#">welcome</a>
           </li>
           <li class="navigation__item">
-            <a href="#">menu</a>
+            <a class="navigation__link" href="#">menu</a>
           </li>
           <li class="navigation__item">
-            <a href="#">reservations</a>
+            <a class="navigation__link" href="#">reservations</a>
           </li>
           <li class="navigation__item">
-            <a href="#">news</a>
+            <a class="navigation__link" href="#">news</a>
           </li>
           <li class="navigation__item">
-            <a href="#">contact</a>
+            <a class="navigation__link" href="#">contact</a>
           </li>
         </ul>
       </nav>
       <div class="page-header__social  social">
         <ul class="social__list">
           <li class="social__item">
-            <a href="#" class="socil__link  socil__link--twitter">twitter</a>
+            <a href="#" class="social__link  socail__link--twitter">twitter</a>
           </li>
           <li class="social__item">
-            <a href="#" class="socil__link  socil__link--facebook">facebook</a>
+            <a href="#" class="social__link  social__link--facebook">facebook</a>
           </li>
           <li class="social__item">
-            <a href="#" class="socil__link  socil__link--instagram">instagram</a>
+            <a href="#" class="social__link  social__link--instagram">instagram</a>
           </li>
         </ul>
       </div>
     </div>
+  </div>
+
+  <div class="page-header__wrapper">
     <div class="page-header__greeting greeting">
       <h1 class="greeting__title">Pastry with love</h1>
       <p class="greeting__description">We're bringing you fresh ingredients every day in ways you can't resist.</p>
