--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
       <div class="page-header__logo  logo">
         <a class="logo__link" href="#">Gustoso</a>
       </div>
-      <nav class="page-header__navigation  navigation">
+      <nav class="page-header__navigation  navigation  navigation--opened">
+        <button class="navigation__toggle  navigation__toggle--opened" type="button">Открыть меню</button>
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a class="navigation__link" href="#">welcome</a>
+            <a class="navigation__link" href="index.html">welcome</a>
           </li>
           <li class="navigation__item">
             <a class="navigation__link" href="#">menu</a>
@@ -277,6 +278,8 @@
     </nav>
   </div>
 </footer>
+
+<script src="js/script.js"></script>
   
 </body>
 </html>
