correction css for about-block

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <img class="quote__author-photo" src="img/portrait.png" alt="portrait" width="100" height="100">
           <cite class="quote__author-name">Gaspare</cite>
         </div>
-        <q class="quote__citation">Unique creations for unique
+        <q class="quote__citation">Unique creations for unique<br>
             occasions.</q>
       </blockquote>
     </div>
