correction css for dishes-block

--- a/index.html
+++ b/index.html
@@ -96,62 +96,62 @@
   <section class="page-main__dishes  dishes">
     <h2 class="dishes__title visually-hidden">Our dishes</h2>
     <div class="dishes__wrapper">
-      <section class="dishes__item">
+      <section class="dishes__item  ">
         <img class="dishes__image" src="img/menu.png" width="585" height="512" alt="">
         <div class="dishes__description">
           <h3 class="dishes__title">Tasty pancakes</h3>
           <b class="dishes__subtitle">season favourite</b>
           <p class="dishes__text">Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus.</p>
-        </div>
-        <div class="dishes__time">
-          <b class="dishes__time-text">ready in</b>
-          <p class="dishes__time-value">40</p>
-          <span class="dishes__time-unit">mins</span>
+          <div class="dishes__time">
+            <b class="dishes__time-text">ready in</b>
+            <p class="dishes__time-value">40</p>
+            <span class="dishes__time-unit">mins</span>
+          </div>
         </div>
       </section>
       <section class="dishes__item  dishes__item--hidden">
         <img class="dishes__image" src="img/menu-1.png" width="585" height="512" alt="">
         <div class="dishes__description">
-            <h3 class="dishes__title">Salami sandwich</h3>
-            <b class="dishes__subtitle">the most popular</b>
-            <p class="dishes__text">Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus.</p>
-          </div>
+          <h3 class="dishes__title">Salami sandwich</h3>
+          <b class="dishes__subtitle">the most popular</b>
+          <p class="dishes__text">Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus.</p>
           <div class="dishes__time">
             <b class="dishes__time-text">ready in</b>
             <p class="dishes__time-value">20</p>
             <span class="dishes__time-unit">mins</span>
           </div>
+        </div>
       </section>
       <section class="dishes__item  dishes__item--hidden">
         <img class="dishes__image" src="img/menu-2.png" width="585" height="512" alt="">
         <div class="dishes__description">
-            <h3 class="dishes__title">Berry dessert</h3>
-            <b class="dishes__subtitle">summer choice</b>
-            <p class="dishes__text">Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus.</p>
-          </div>
+          <h3 class="dishes__title">Berry dessert</h3>
+          <b class="dishes__subtitle">summer choice</b>
+          <p class="dishes__text">Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus.</p>
           <div class="dishes__time">
             <b class="dishes__time-text">ready in</b>
             <p class="dishes__time-value">5</p>
             <span class="dishes__time-unit">mins</span>
           </div>
+        </div>
       </section>
       <section class="dishes__item  dishes__item--hidden">
         <img class="dishes__image" src="img/menu-3.png" width="585" height="512" alt="">
         <div class="dishes__description">
-            <h3 class="dishes__title">Fresh salad</h3>
-            <b class="dishes__subtitle">the most useful</b>
-            <p class="dishes__text">Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus.</p>
-          </div>
+          <h3 class="dishes__title">Fresh salad</h3>
+          <b class="dishes__subtitle">the most useful</b>
+          <p class="dishes__text">Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus.</p>
           <div class="dishes__time">
             <b class="dishes__time-text">ready in</b>
             <p class="dishes__time-value">15</p>
             <span class="dishes__time-unit">mins</span>
           </div>
+        </div>
       </section>
       <div class="dishes__tabs tabs">
-        <button class="tabs__arrow tabs__arrow--prev" type="button">previous</button>
+        <button class="tabs__arrow tabs__arrow--prev tabs__arrow--disabled" type="button">previous</button>
         <ul class="tabs__list">
-          <li class="tabs__item">
+          <li class="tabs__item  tabs__item--active">
             <img class="tabs__image" src="img/slider.png" alt="" width="90" height="90">
           </li>
           <li class="tabs__item">
