mobile css for breakfast-block

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   <section class="page-main__breakfast  breakfast">
     <div class="breakfast__menu">
       <h2 class="breakfast__title">Breakfast</h2>
-      <b class="breakfast__subtitle"><sub>7</sub>am Breakfast? we’re open!</b>
+      <b class="breakfast__subtitle">7am Breakfast? we’re open!</b>
       <ul class="breakfast__list">
         <li class="breakfast__item">
           <h3 class="breakfast__name">Full breakfast</h3>
