mobile css for book-block

--- a/index.html
+++ b/index.html
@@ -193,7 +193,11 @@
     </div>
     <div class="breakfast__book book">
       <div class="book__page  book__page--main">
-        <div class="book__date">EST. 1893</div>
+        <div class="book__date"><span>EST.</span><span>1893</span></div>
+        <div class="book__icon">
+          <div class="book__icon-line"></div>
+          <div class="book__icon-image"></div>
+        </div>
         <h3 class="book__title">Your morning Escape with Flair</h3>
         <p class="book__description">Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo.</p>
         <a class="book__link button" href="#">read</a>
