mobile css for footer

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
       </ul>
     </nav>
     <div class="page-footer__logo  logo">
-      <a class="logo__link" href="#">Gustoso</a>
+      <a class="logo__link  logo__link--dark" href="#">Gustoso</a>
     </div>
     <nav class="page-footer__navigation  page-footer__navigation-right  footer-nav">
       <ul class="footer-nav__list">
