adaptive page-header

--- a/index.html
+++ b/index.html
@@ -15,29 +15,31 @@
         <a class="logo__link" href="#">Gustoso</a>
       </div>
       <nav class="page-header__navigation  navigation  navigation--opened">
-        <button class="navigation__toggle  navigation__toggle--opened" type="button">Открыть меню</button>
-        <ul class="navigation__list">
-          <li class="navigation__item">
-            <a class="navigation__link" href="index.html">welcome</a>
-          </li>
-          <li class="navigation__item">
-            <a class="navigation__link" href="#">menu</a>
-          </li>
-          <li class="navigation__item">
-            <a class="navigation__link" href="#">reservations</a>
-          </li>
-          <li class="navigation__item">
-            <a class="navigation__link" href="#">news</a>
-          </li>
-          <li class="navigation__item">
-            <a class="navigation__link" href="#">contact</a>
-          </li>
-        </ul>
+        <div class="navigation__wrapper">
+          <button class="navigation__toggle  navigation__toggle--opened" type="button">Открыть меню</button>
+          <ul class="navigation__list">
+            <li class="navigation__item">
+              <a class="navigation__link" href="index.html">welcome</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="#">menu</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="#">reservations</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="#">news</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="#">contact</a>
+            </li>
+          </ul>
+        </div>
       </nav>
       <div class="page-header__social  social">
         <ul class="social__list">
           <li class="social__item">
-            <a href="#" class="social__link  socail__link--twitter">twitter</a>
+            <a href="#" class="social__link  social__link--twitter">twitter</a>
           </li>
           <li class="social__item">
             <a href="#" class="social__link  social__link--facebook">facebook</a>
@@ -50,13 +52,12 @@
     </div>
   </div>
 
-  <div class="page-header__wrapper">
-    <div class="page-header__greeting greeting">
-      <h1 class="greeting__title">Pastry with love</h1>
-      <p class="greeting__description">We're bringing you fresh ingredients every day in ways you can't resist.</p>
-      <a href="#" class="greeting__link button">our menu</a>
-    </div>
+  <div class="page-header__greeting greeting">
+    <h1 class="greeting__title">Pastry with love</h1>
+    <p class="greeting__description">We're bringing you fresh ingredients every day in ways you can't resist.</p>
+    <a href="#" class="greeting__link button">our menu</a>
   </div>
+
 </header>
 
 <main class="page-main">
