adaptive css for about-block

--- a/index.html
+++ b/index.html
@@ -62,35 +62,37 @@
 
 <main class="page-main">
   <section class="page-main__about  about">
-    <div class="about__text-block">
-      <h2 class="about__title">Art of cakes</h2>
-      <b class="about__subtitle">We create delicious memories</b>
-      <p class="about__description">Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed.</p>
-      <blockquote class="about__quote  quote">
-        <h3 class="quote__title">Chef Cook</h3>
-        <div class="quote__author">
-          <cite class="quote__author-name">Benito</cite>
-          <img class="quote__author-photo" src="img/portrait.png" alt="portrait" width="100" height="100">
-          <cite class="quote__author-name">Gaspare</cite>
+    <div class="about__wrapper">
+      <div class="about__text-block">
+        <h2 class="about__title">Art of cakes</h2>
+        <b class="about__subtitle">We create delicious memories</b>
+        <p class="about__description">Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed.</p>
+        <blockquote class="about__quote  quote">
+          <h3 class="quote__title">Chef Cook</h3>
+          <div class="quote__author">
+            <cite class="quote__author-name">Benito</cite>
+            <img class="quote__author-photo" src="img/portrait.png" alt="portrait" width="100" height="100">
+            <cite class="quote__author-name">Gaspare</cite>
+          </div>
+          <q class="quote__citation">Unique creations for unique<br>
+              occasions.</q>
+        </blockquote>
+      </div>
+      <div class="about__pictures">
+        <div class="about__item">
+          <img class="about__image" src="img/img_1.jpg" width="295" height="250" alt>
         </div>
-        <q class="quote__citation">Unique creations for unique<br>
-            occasions.</q>
-      </blockquote>
-    </div>
-    <div class="about__pictures">
-      <div class="about__item">
-        <img class="about__image" src="img/img_1.jpg" width="295" height="250" alt>
+        <div class="about__item">
+          <img class="about__image" src="img/img_2.jpg" width="295" height="250" alt>
+        </div>
+        <div class="about__item">
+          <img class="about__image" src="img/img_3.jpg" width="295" height="250" alt>
+        </div>
+        <div class="about__item">
+          <img class="about__image" src="img/img_4.jpg" width="295" height="250" alt>
+        </div>
+        <div class="about__slogan">Tastes so<br> good!</div>
       </div>
-      <div class="about__item">
-        <img class="about__image" src="img/img_2.jpg" width="295" height="250" alt>
-      </div>
-      <div class="about__item">
-        <img class="about__image" src="img/img_3.jpg" width="295" height="250" alt>
-      </div>
-      <div class="about__item">
-        <img class="about__image" src="img/img_4.jpg" width="295" height="250" alt>
-      </div>
-      <div class="about__slogan">Tastes so<br> good!</div>
     </div>
   </section>
 
