add stars for dishes-block

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
           <source media="(min-width: 960px)" srcset = "img/menu-desktop-small.png">
           <img class="dishes__image" src="img/menu.png" width="585" height="512" alt="">
         </picture>
+        <div class="dishes__stars">4</div>
         <div class="dishes__description">
           <h3 class="dishes__title">Tasty pancakes</h3>
           <b class="dishes__subtitle">season favourite</b>
