adaptive for breakfast-block

--- a/index.html
+++ b/index.html
@@ -184,40 +184,66 @@
   </section>
 
   <section class="page-main__breakfast  breakfast">
-    <div class="breakfast__menu">
-      <h2 class="breakfast__title">Breakfast</h2>
-      <b class="breakfast__subtitle">7am Breakfast? we’re open!</b>
-      <ul class="breakfast__list">
-        <li class="breakfast__item">
-          <h3 class="breakfast__name">Full breakfast</h3>
-          <p class="breakfast__description">Duis ut tortor, et risus, vulputate pretium</p>
-          <span class="breakfast__cost">$12.49</span>
-        </li>
-        <li class="breakfast__item">
-          <h3 class="breakfast__name">Toast &amp; Jam</h3>
-          <p class="breakfast__description">Suspendisse, tempus, nterdum</p>
-          <span class="breakfast__cost">$4.90</span>
-        </li>
-        <li class="breakfast__item">
-          <h3 class="breakfast__name">Muffins</h3>
-          <p class="breakfast__description">Fusce eget dui sodales est</p>
-          <span class="breakfast__cost">$3.95</span>
-        </li>
-      </ul>
-    </div>
-    <div class="breakfast__book book">
-      <div class="book__page  book__page--main">
-        <div class="book__date"><span>EST.</span><span>1893</span></div>
-        <div class="book__icon">
-          <div class="book__icon-line"></div>
-          <div class="book__icon-image"></div>
-        </div>
-        <h3 class="book__title">Your morning Escape with Flair</h3>
-        <p class="book__description">Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo.</p>
-        <a class="book__link button" href="#">read</a>
+    <div class="breakfast__wrapper">
+      <div class="breakfast__menu">
+        <h2 class="breakfast__title">Breakfast</h2>
+        <b class="breakfast__subtitle">7am Breakfast? we’re open!</b>
+        <ul class="breakfast__list">
+          <li class="breakfast__item">
+            <h3 class="breakfast__name">Full breakfast</h3>
+            <p class="breakfast__description">Duis ut tortor, et risus, vulputate pretium</p>
+            <span class="breakfast__cost">$12.49</span>
+          </li>
+          <li class="breakfast__item">
+            <h3 class="breakfast__name">Toast &amp; Jam</h3>
+            <p class="breakfast__description">Suspendisse, tempus, nterdum</p>
+            <span class="breakfast__cost">$4.90</span>
+          </li>
+          <li class="breakfast__item">
+            <h3 class="breakfast__name">Muffins</h3>
+            <p class="breakfast__description">Fusce eget dui sodales est</p>
+            <span class="breakfast__cost">$3.95</span>
+          </li>
+        </ul>
       </div>
-      <div class="book__page  book__page--2"></div>
-      <div class="book__page  book__page--3"></div>
+      <div class="breakfast__book book">
+        <div class="book__wrapper  book__wrapper--main">
+          <div class="book__page  book__page--main">
+            <div class="book__date"><span>EST.</span><span>1893</span></div>
+            <div class="book__icon">
+              <div class="book__icon-line"></div>
+              <div class="book__icon-image"></div>
+            </div>
+            <h3 class="book__title">Your morning Escape with Flair</h3>
+            <p class="book__description">Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo.</p>
+            <a class="book__link button" href="#">read</a>
+          </div>
+        </div>
+        <div class="book__wrapper  book__wrapper--2">
+          <div class="book__page  book__page--2">
+            <div class="book__date"><span>EST.</span><span>1893</span></div>
+            <div class="book__icon">
+              <div class="book__icon-line"></div>
+              <div class="book__icon-image"></div>
+            </div>
+            <h3 class="book__title">Your morning Escape with Flair</h3>
+            <p class="book__description">Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo.</p>
+            <a class="book__link button" href="#">read</a>
+          </div>
+        </div>
+        <div class="book__wrapper  book__wrapper--3">
+          <div class="book__page  book__page--3">
+            <div class="book__date"><span>EST.</span><span>1893</span></div>
+            <div class="book__icon">
+              <div class="book__icon-line"></div>
+              <div class="book__icon-image"></div>
+            </div>
+            <h3 class="book__title">Your morning Escape with Flair</h3>
+            <p class="book__description">Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo.</p>
+            <a class="book__link button" href="#">read</a>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
